--- a/console.ipynb
+++ b/console.ipynb
@@ -10,9 +10,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np \n",
-    "from kitti360scripts.helpers.project import CameraPerspective\n",
-    "from kitti360_processor import SequenceProcessor"
+    "import numpy as np "
    ]
   },
   {
@@ -21,16 +19,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "def filter_dataset(dset_dir, out_dir, filter_dict):\n",
-    "    # make dir if not exist \n",
-    "    if not os.path.exists(out_dir):\n",
-    "        os.mkdir(f'{out_dir}')\n",
-    "        os.mkdir(f'{out_dir}/images')\n",
-    "        os.mkdir(f'{out_dir}/labels')\n",
-    "    for key in tqdm(filter_dict):\n",
-    "        os.system(f'cp -r {dset_dir}/images/{key} {out_dir}/images/{key}')\n",
-    "        os.system(f'cp -r {dset_dir}/labels/{key} {out_dir}/labels/{key}')\n"
+    "from main import main\n",
+    "main()"
    ]
   },
   {
@@ -38,32 +28,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "import os\n",
-    "from tqdm import tqdm\n",
-    "from labels import semantics2rgbimg, kitti360_sequences\n",
-    "from kitti360_dataset import combine_all_sequence_filters, export_datavis_videos, seq_export_filters\n",
-    "\n",
-    "kitti360_root = \"data/KITTI-360/\" # make sure `ln -s [KITTI360-root] ./data/`\n",
-    "dset_dir = \"output/kitti360_v1_512_test\"\n",
-    "resolution = (512,)*2\n",
-    "\n",
-    "processor = DatasetProcessor(kitti360_root)\n",
-    "# generate data: (images/ and labels/)\n",
-    "processor.process_all_sequences(outdir=dset_dir, semantics_resolution=(512,512))\n",
-    "#processor.process_all_sequences(outdir=\"output/kitti360_v1_256/\", semantics_resolution=(256,256))\n",
-    "\n",
-    "# generate filters for each sequence, and make visualization videos\n",
-    "for sequence in kitti360_sequences:\n",
-    "    print(\"sequence\", sequence)\n",
-    "    filters, _ = kitti360_dataset.seq_export_filters(dset_dir=dset_dir, sequence=sequence)\n",
-    "    for filter_name in filters:\n",
-    "        filters[filter_name] = filters[filter_name]\n",
-    "    kept_names = [\"full\", \"basic_filter\", \"std_filter\", \"strict_filter\"]\n",
-    "    kept_filters = {k:filters[k] for k in kept_names}\n",
-    "    export_datavis_videos(total_trajs=kept_filters[\"full\"].sum(), fps=120, dset_dir=dset_dir, filters=kept_filters, sequence=sequence)\n",
-    "# combine all sequence's frames together\n",
-    "kitti360_dataset.combine_all_sequence_filters(dset_dir=dset_dir)\n"
+    "# Uncurated codes"
    ]
   },
   {
@@ -184,6 +155,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -287,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.15"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
